5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1577_1330.log
== TEST (2019-03-19 19:24:15) 
-- CODE:
area=250/6
print(area)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:24:17) 
-- CODE:
area=250/6
print(area)
-- EXECUTION TIME:
0.204999
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:24:35) 
-- CODE:
area=250*6
print(area)
-- OUTPUT:
1500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:24:39) 
-- CODE:
area=250*6
print(area)
-- EXECUTION TIME:
0.171022
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
1500
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:24:48) 
-- CODE:
area=250/=6
print(area)
-- ERROR:
File "XXXX", line 1
    area=250/=6
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:24:54) 
-- CODE:
area=250/6
print(area)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:24:57) 
-- CODE:
area=250/6
print(area)
-- EXECUTION TIME:
0.180506
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:29:04) 
-- CODE:
print round (250, 6)

-- ERROR:
File "XXXX", line 1
    print round (250, 6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:29:11) 
-- CODE:
printround (250, 6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    printround (250, 6)
NameError: name 'printround' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:29:15) 
-- CODE:
print round (250, 6)

-- ERROR:
File "XXXX", line 1
    print round (250, 6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:29:35) 
-- CODE:
print (round) (250, 6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (round) (250, 6)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:30:14) 
-- CODE:
round print (250, 6)
-- ERROR:
File "XXXX", line 1
    round print (250, 6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:30:25) 
-- CODE:
round print (250, 6)
-- ERROR:
File "XXXX", line 1
    round print (250, 6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:33:42) 
-- CODE:
round (250, 6)
print 250/6
-- ERROR:
File "XXXX", line 2
    print 250/6
            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(250/6)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:33:51) 
-- CODE:
round (250, 6)
print=
-- ERROR:
File "XXXX", line 2
    print=
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:34:03) 
-- CODE:
round (250, 6)
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(area)
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:34:12) 
-- CODE:
round (250,6)
print=(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print=(area)
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 19:34:58) 
-- CODE:
print(round (260, 6))
-- OUTPUT:
260
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 19:35:02) 
-- CODE:
print(round (260, 6))
-- EXECUTION TIME:
0.150307
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
260
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:11:44) 
-- CODE:
print(round(250))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:20:26) 
-- CODE:
x=250
x=x/6
print (x)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:21:05) 
-- CODE:
x=250
x=x/6
print (round(x))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:21:10) 
-- CODE:
x=250
x=x/6
print (round(x))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:21:12) 
-- CODE:
x=250
x=x/6
print (round(x))
-- EXECUTION TIME:
0.195226
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:21:33) 
-- CODE:
x=250
x=x/6
print (round(x,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:21:39) 
-- CODE:
x=250
x=x/6
print (round(x,2))
-- EXECUTION TIME:
0.158628
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
